Add jaxb-core and jaxb-impl as dependencies. Set java version for deb to 11.